css/style.css
/* ================================= 
  Base Element Styles
==================================== */

* {
  box-sizing: border-box;
}

body,
input,
button {
	font-family: 'Muli', sans-serif;
}

body {
  font: 1em/1.5;
  color: #184f68;
	background: #accbd9;
}

header {
	text-align: center;  
}

h1 {
	font-size: 2.5em;
	text-shadow: 0 1px 0 rgba(255, 255, 255, 0.45);
	margin: 0;
}

a {
  text-decoration: none;
}

/* ================================= 
  Form Element Styles
==================================== */

form {
	padding: .875em 1.875em 1.875em;
	background: #85b5ca;
}

fieldset,
legend,
button {
	padding: 0;
	border: none;
}

fieldset {
	margin-top: 1.5em;
}

legend,
button {
	font-size: 1.25em;	
}

legend {
	font-weight: 500;
	padding-top: .5em;
	border-top: 2px solid #679cb3;
	margin-bottom: 1.125em;
}

input[type="text"],
input[type="email"],
legend {
	width: 100%;
}

label {
	color: #000;
	display: block;
	margin-bottom: .5em;
}

input,
select {
	margin-bottom: 1.125em;	
}

input {
	font-size: 1em;
	font-weight: 500;
	padding: .8em;
	background: #c1deeb;
	border: 2px solid #c1deeb;
	outline: none;
}

input:focus {
	background: #fff;
	border-color: #5e97b0;
	transition: border-color .4s, background-color .4s;
}

input[type="checkbox"],
input[type="radio"] {
	display: inline-block;
}

button {
	color: #fff;
	padding: .55em 1.25em;
	background: #22627e;
	margin: 1.25em 0 .5em;
	cursor: pointer;
}

button:hover {
	background: #184c62;
}

#paypal,
#credit-card,
#bitcoin{
	display: none;
}
.error-message{
	display: block;
	margin-bottom:10px;
	margin-top:2px;
	color:white;
	background-color:red;
	padding:5px;
}
.validation-failed{
	/* background-color:red; */
	border:2px solid red;
	color:red;
}
#total{
	font-weight: bolder;
	text-transform: uppercase;
	letter-spacing: 1.2px;
	font-size: 1.2rem;
	color:white;
	background-color:#124C60;
	padding:5px 10px;
	border:1px solid white;
	display: block;
	margin-bottom: 10px;
	text-align: right;
}
/* ================================= 
  Page Styles
==================================== */

.container {
	margin: auto;
	max-width: 680px;
}

.shirt div {
	float: left;
	margin-right: .85em;
}

.interests input {
	margin-bottom: 0;
}

.credit-card {
	margin-top: 1.25em;
}

/* ================================= 
  Helper Classes
==================================== */

.is-hidden {
	display: none;
}

.clearfix::after {
  content: " ";
  display: table;
  clear: both;
}

/* ================================= 
  Media Queries
==================================== */

@media (min-width: 0) and (max-width: 679px) {
	header {
		padding: 2em 0;
	}
	button {
		width: 100%;
	}
}

@media (min-width: 680px) {
	header {
		padding: 4.65em 0 2.5em;
	}
	.col {
		float: left;
	}
	.col + .col {
		margin-left: 2.5%;
	}
	.col-3 {
		width: 23%;
	}
	.col-6 {
		width: 49%;
	}
}

